--- a/portal/templates/users/logged_out.html
+++ b/portal/templates/users/logged_out.html
@@ -1,22 +1,14 @@
-{% extends 'base.html' %}
+{% extends "inc/forms/_unregistered_user.html" %}
 {% load static %}
 {% block title %}Вы вышли из системы{% endblock %}
-{% block content %}
-  <div class="row justify-content-center">
-    <div class="col-md-8 p-5">
-      <div class="text-center">
-        <img class="mb-2" src="{% static 'images/logo-circle.svg' %}" alt=""
-             width="72"
-             height="72">
-      </div>
-      <h1 class="h3 mb-4 fw-normal text-center">Успешный выход</h1>
-      <div class="card">
-        <div class="card-body">
-          <p>
-            Вы вышли из своей учётной записи. Ждём вас снова!
-          </p>
-        </div>
-      </div>
-    </div>
+{% block page_title %}Успешный выход{% endblock %}
+{% block page_descr %}Вы вышли из своей учётной записи.{% endblock %}
+{% block unreg_content %}
+  <div class="col-12">
+    <a class="btn btn-primary w-100" href="{% url 'authapp:login' %}">Войти
+    </a>
   </div>
-{% endblock %} 
+{% endblock %}
+
+
+
