--- a/portal/templates/users/password_change_form.html
+++ b/portal/templates/users/password_change_form.html
@@ -1,32 +1,30 @@
-{% extends "base.html" %}
-{% load static %}
-{% block title %}Изменить пароль{% endblock %}
-{% block content %}
-  <div class="row justify-content-center">
-    <div class="col-md-8 p-5">
-      <div class="text-center">
-        <img class="mb-2" src="{% static 'images/logo-circle.svg' %}" alt=""
-             width="72"
-             height="72">
-      </div>
-      <h1 class="h3 mb-4 fw-normal text-center">Изменить пароль</h1>
-      <div class="card">
-        <div class="card-body">
-          {% include 'inc/forms/_form_nonfield_errors.html' %}
-
-          <form method="post" action="{% url 'users:password_change' %}">
-
-            {% csrf_token %}
-
-            {% include 'inc/forms/_form_fields.html' %}
-            <div class="col-md-12 text-center">
-              <button type="submit" class="btn btn-primary">
-                Изменить пароль
-              </button>
-            </div>
-          </form>
-        </div>
-      </div>
+{% load user_filters %}
+{% csrf_token %}
+{% for field in password_change_form %}
+  <div class="row mb-3"
+      {% if field.field.required %}
+       aria-required="true"
+      {% else %}
+       aria-required="false"
+      {% endif %}
+  >
+    <label for="{{ field.id_for_label }}"
+           class="col-md-5 col-lg-4 col-form-label">
+      {{ field.label }}
+      {% if field.field.required %}
+        <span class="required text-danger">*</span>
+      {% endif %}
+    </label>
+    <div class="col-md-7 col-lg-8">
+      {{ field|addclass:'form-control' }}
     </div>
+    {% include 'inc/forms/_form_field_errors.html' %}
+    {% if field.help_text %}
+      <small id="{{ field.id_for_label }}-help" class="form-text
+                    text-muted">
+        {{ field.help_text|safe }}
+      </small>
+    {% endif %}
+
   </div>
-{% endblock %}
+{% endfor %}
