--- a/portal/templates/users/password_reset_confirm.html
+++ b/portal/templates/users/password_reset_confirm.html
@@ -1,48 +1,29 @@
-{% extends "base.html" %}
+{% extends "inc/forms/_unregistered_user.html" %}
 {% load static %}
-{% block title %}Войти{% endblock %}
-{% block content %}
+{% block title %}Ввод нового пароля{% endblock %}
+{% block page_title %}Восстановление пароля{% endblock %}
+{% block unreg_content %}
   {% if validlink %}
-    <div class="row justify-content-center">
-      <div class="col-md-8 p-5">
-        <div class="text-center">
-          <img class="mb-2" src="{% static 'images/logo-circle.svg' %}" alt=""
-               width="72" height="72">
-        </div>
-        <h1 class="h3 mb-4 fw-normal text-center">Введите новый пароль</h1>
-        <div class="card">
-          <div class="card-body">
-            {% include 'inc/forms/_form_nonfield_errors.html' %}
-            <form method="post">
-              {% csrf_token %}
+  <form method="post" class="row g-3 needs-validation" novalidate>
+    {% csrf_token %}
+    {% include 'inc/forms/_form_nonfield_errors.html' %}
+    {% include 'inc/forms/_form_fields.html' %}
+    <div class="col-12">
+      <button class="btn btn-primary w-100" type="submit">Назначить новый
+        пароль
+      </button>
+    </div>
 
-              {% include 'inc/forms/_form_fields.html' %}
-              <div class="col-md-12 text-center">
-                <button type="submit" class="btn btn-primary">
-                  Назначить новый пароль
-                </button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
+    <div class="col-12">
+      <p class="small mb-0">Уже есть аккаунт?
+        <a href="{% url 'authapp:login' %}">Войти</a></p>
     </div>
+  </form>
   {% else %}
-    <div class="row justify-content-center">
-      <div class="col-md-8 p-5">
-        <div class="card">
-          <div class="text-center">
-            <img class="mb-2" src="{% static 'images/logo-circle.svg' %}"
-                 alt=""
-                 width="72" height="72">
-          </div>
-          <h1 class="h3 mb-4 fw-normal text-center">Ошибка</h1>
-          <div class="card-body">
-            <p>Ссылка сброса пароля содержит ошибку или устарела. Попробуйте
-              восстановить пароль еще раз</p>
-          </div>
-        </div>
-      </div>
-    </div>
+  <div class="col-12">
+    <p>Ошибка!</p>
+    <p>Ссылка сброса пароля содержит ошибку или устарела. Попробуйте
+      восстановить пароль еще раз</p>
+  </div>
   {% endif %}
 {% endblock %}
