--- a/portal/templates/users/password_reset_form.html
+++ b/portal/templates/users/password_reset_form.html
@@ -1,36 +1,22 @@
-{% extends "base.html" %}
+{% extends "inc/forms/_unregistered_user.html" %}
 {% load static %}
 {% block title %}Сброс пароля{% endblock %}
-{% block content %}
-  <div class="row justify-content-center">
-    <div class="col-md-8 p-5">
-      <div class="text-center">
-        <img class="mb-2" src="{% static 'images/logo-circle.svg' %}" alt=""
-             width="72"
-             height="72">
-      </div>
-      <h1 class="h3 mb-4 fw-normal text-center">Восстановление
-        пароля</h1>
-      <div class="card">
-        <div class="card-header">
-          Чтобы сбросить старый пароль — введите адрес
-          электронной почты, указанный при регистрации
-        </div>
-        <div class="card-body">
-          {% include 'inc/forms/_form_nonfield_errors.html' %}
-
-          <form method="post" action="{% url 'users:password_reset' %}">
-            {% csrf_token %}
-
-            {% include 'inc/forms/_form_fields.html' %}
-            <div class="col-md-12 text-center">
-              <button type="submit" class="btn btn-primary">
-                Сбросить пароль
-              </button>
-            </div>
-          </form>
-        </div>
-      </div>
+{% block page_title %}Сброс пароля{% endblock %}
+{% block page_descr %}Чтобы сбросить старый пароль — введите адрес
+  электронной почты, указанный при регистрации{% endblock %}
+{% block unreg_content %}
+  <form method="post" action="{% url 'authapp:password_reset' %}"
+        class="row g-3 needs-validation" novalidate>
+    {% csrf_token %}
+    {% include 'inc/forms/_form_nonfield_errors.html' %}
+    {% include 'inc/forms/_form_fields.html' %}
+    <div class="col-12">
+      <button class="btn btn-primary w-100" type="submit">Сбросить пароль
+      </button>
     </div>
-  </div>
+    <div class="col-12">
+      <p class="small mb-0">Еще нет аккаунта?
+        <a href="{% url 'authapp:signup' %}">Зарегистрироваться</a></p>
+    </div>
+  </form>
 {% endblock %}
