--- a/portal/templates/base.html
+++ b/portal/templates/base.html
@@ -13,28 +13,67 @@
         href="{% static 'img/fav/favicon-16x16.png' %}">
   <meta name="msapplication-TileColor" content="#000">
   <meta name="theme-color" content="#ffffff">
-  <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
+  <link href="https://fonts.gstatic.com" rel="preconnect">
+  <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+      rel="stylesheet">
+
+
+  <!-- Vendor CSS Files -->
+  <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}"
+        rel="stylesheet">
+  <link href="{% static 'vendor/bootstrap-icons/bootstrap-icons.css' %}"
+        rel="stylesheet">
+  <link href="{% static 'vendor/boxicons/css/boxicons.min.css' %}"
+        rel="stylesheet">
+  {#  <link href="{% static 'vendor/quill/quill.snow.css' %}" rel="stylesheet">#}
+  {#  <link href="{% static 'vendor/quill/quill.bubble.css' %}" rel="stylesheet">#}
+  {#  <link href="{% static 'vendor/remixicon/remixicon.css' %}" rel="stylesheet">#}
+  {#  <link href="{% static 'vendor/simple-datatables/style.css' %}"#}
+  {#        rel="stylesheet">#}
+
+  <link rel="stylesheet" href="{% static 'css/niceadmin-style.css' %}">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <link rel="stylesheet"
+        href="{% static 'vendor/cropperjs/cropper.min.css' %}">
+
   <title>{% block title %}{% endblock %}</title>
 </head>
 <body class="d-flex flex-column h-100">
-<header class="p-3 mb-3 border-bottom">
-  {% include 'inc/_header.html' %}
-</header>
-<main class="flex-shrink-0">
-  <div class="container py-5">
-    {% block content %}
-    {% endblock %}
-  </div>
+{% if user.is_authenticated %}
+  <header class="header fixed-top d-flex align-items-center">
+    {% include 'inc/_header.html' %}
+  </header>
+  <aside id="sidebar" class="sidebar">
+    {% include 'inc/_aside.html' %}
+  </aside>
+{% endif %}
+<main {% if user.is_authenticated %}class="main" id="main"{% endif %}>
+  {% block content %}
+  {% endblock %}
 </main>
-<footer class="footer mt-auto py-3 bg-light">
+<footer class="footer mt-auto py-3 bg-light"
+        {% if user.is_authenticated %}id="footer"{% endif %}>
   {% include 'inc/_footer.html' %}
 </footer>
 <script
     src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-<script type='text/javascript' src="
-{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
-<script type='text/javascript'
-        src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}">
-</script>
+{#<script src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}"></script>#}
+{#<script src="{% static 'vendor/apexcharts/apexcharts.min.js' %}"></script>#}
+<script
+    src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+{#<script src="{% static 'vendor/chart.js/chart.min.js' %}"></script>#}
+{#<script src="{% static 'vendor/echarts/echarts.min.js' %}"></script>#}
+{#<script src="{% static 'vendor/quill/quill.min.js' %}"></script>#}
+{#<script#}
+{#    src="{% static 'vendor/simple-datatables/simple-datatables.js' %}"></script>#}
+{#<script src="{% static 'vendor/tinymce/tinymce.min.js' %}"></script>#}
+{#<script src="{% static 'vendor/php-email-form/validate.js' %}"></script>#}
+<script
+    src="{% static 'vendor/jqueryuploader/jquery.dm-uploader.min.js' %}"></script>
+">
+<script src="{% static 'vendor/cropperjs/cropper.min.js' %}"></script>
+<script src="{% static 'js/main.js' %}"></script>
+{% block page_scripts  %}{% endblock  %}
 </body>
 </html>
