--- a/portal/templates/inc/_footer.html
+++ b/portal/templates/inc/_footer.html
@@ -1,3 +1,11 @@
 <div class="container">
-  <span class="text-muted">Place sticky footer content here.</span>
+  <div class="copyright">
+    &copy; Copyright <strong><span>NiceAdmin</span></strong>. All Rights
+    Reserved
+  </div>
+  <div class="credits">
+    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+  </div>
 </div>
+
+<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
