--- a/portal/templates/inc/forms/_form_field_errors.html
+++ b/portal/templates/inc/forms/_form_field_errors.html
@@ -1,5 +1,5 @@
 {% for error in field.errors %}
-  <div class="alert alert-danger mt-3">
+  <div class="invalid-feedback">
     {{ error|escape }}
   </div>
 {% endfor %}
