--- a/portal/templates/inc/forms/_form_fields.html
+++ b/portal/templates/inc/forms/_form_fields.html
@@ -1,26 +1,27 @@
 {% load user_filters %}
 {% for field in form %}
-  <div class="form-floating mb-3"
+  <div class="col-12"
       {% if field.field.required %}
        aria-required="true"
       {% else %}
        aria-required="false"
       {% endif %}
   >
-    {{ field|addclass:'form-control' }}
-    <label for="{{ field.id_for_label }}">
+    <label for="{{ field.id_for_label }}" class="form-label">
       {{ field.label }}
       {% if field.field.required %}
         <span class="required text-danger">*</span>
       {% endif %}
     </label>
+    {{ field|addclass:'form-control' }}
+    {% include 'inc/forms/_form_field_errors.html' %}
     {% if field.help_text %}
       <small id="{{ field.id_for_label }}-help" class="form-text
                     text-muted">
         {{ field.help_text|safe }}
       </small>
     {% endif %}
-    {% include 'inc/forms/_form_field_errors.html' %}
+
   </div>
 {% endfor %}
 
