--- a/portal/templates/users/email_verification_complete.html
+++ b/portal/templates/users/email_verification_complete.html
@@ -1,21 +1,12 @@
-{% extends "base.html" %}
+{% extends "inc/forms/_unregistered_user.html" %}
 {% load static %}
 {% block title %}Успешное подтверждение email{% endblock %}
-{% block content %}
-  <div class="row justify-content-center">
-    <div class="col-md-8 p-5">
-      <div class="text-center">
-        <img class="mb-2" src="{% static 'images/logo-circle.svg' %}" alt=""
-             width="72"
-             height="72">
-      </div>
-      <h1 class="h3 mb-4 fw-normal text-center">Готово</h1>
-      <div class="card">
-        <div class="card-body">
-          <p>Почта подтверждена. Можете пользоваться сервисом.
-          </p>
-        </div>
-      </div>
-    </div>
+{% block page_title %}Email подтвержден{% endblock %}
+{% block page_descr %}Теепрь вы можете начать пользоваться сервис
+  ом{% endblock %}
+{% block unreg_content %}
+  <div class="col-12">
+    <a class="btn btn-primary w-100" href="{% url 'main:main' %}">Начать
+      пользоваться</a>
   </div>
 {% endblock %}
