--- a/portal/templates/users/login.html
+++ b/portal/templates/users/login.html
@@ -1,38 +1,26 @@
-{% extends "base.html" %}
+{% extends "inc/forms/_unregistered_user.html" %}
 {% load static %}
 {% block title %}Войти{% endblock %}
-{% block content %}
-  <div class="row justify-content-center">
-    <div class="col-12 col-lg-6 p-3">
-    <div class="text-center">
-        <img class="mb-2" src="{% static 'images/logo-circle.svg' %}" alt=""
-             width="72"
-             height="57">
-      </div>
-      <h1 class="h3 mb-4 fw-normal text-center">Войти</h1>
-      <div class="card">
-        <div class="card-body">
-          {% include 'inc/forms/_form_nonfield_errors.html' %}
-
-          <form method="post"
-              {% if action_url %}
-                action="{% url action_url %}"
-              {% endif %}
-          >
-            {% csrf_token %}
-
-            {% include 'inc/forms/_form_fields.html' %}
-            <div class="col-md-12 text-center">
-              <button type="submit" class="btn btn-primary">
-                Войти
-              </button>
-              <a href="{% url 'users:password_reset' %}" class="btn btn-link">
-                Забыли пароль?
-              </a>
-            </div>
-          </form>
-        </div>
-      </div>
+{% block page_title %}Войти{% endblock %}
+{% block page_descr %}Заполните email и пароль, чтобы зайти{% endblock %}
+{% block unreg_content %}
+  <form method="post" {% if action_url %} action="{% url 'action_url' %}"
+  {% endif %}
+      class="row g-3 needs-validation" novalidate >
+  {% csrf_token %}
+    {% include 'inc/forms/_form_nonfield_errors.html' %}
+    {% include 'inc/forms/_form_fields.html' %}
+    <div class="col-12">
+      <button class="btn btn-primary w-100" type="submit">Войти
+      </button>
     </div>
-  </div>
+    <div class="col-12">
+      <p class="small mb-0">Забыли пароль?
+        <a href="{% url 'authapp:password_reset' %}">Восстановить</a></p>
+    </div>
+    <div class="col-12">
+      <p class="small mb-0">Еще нет аккаунта?
+        <a href="{% url 'authapp:signup' %}">Зарегистрироваться</a></p>
+    </div>
+  </form>
 {% endblock %}
