--- a/portal/templates/users/password_reset_complete.html
+++ b/portal/templates/users/password_reset_complete.html
@@ -1,25 +1,13 @@
-{% extends "base.html" %}
+{% extends "inc/forms/_unregistered_user.html" %}
 {% load static %}
 {% block title %}Восстановление пароля{% endblock %}
-{% block content %}
-  <div class="row justify-content-center">
-    <div class="col-md-8 p-5">
-      <div class="text-center">
-        <img class="mb-2" src="{% static 'images/logo-circle.svg' %}" alt=""
-             width="72"
-             height="72">
-      </div>
-      <h1 class="h3 mb-4 fw-normal text-center">Восстановление пароля завершено</h1>
-      <div class="card">
-        <div class="card-body">
-          <p>Ваш пароль был сохранен. Используйте его для входа</p>
-           <div class="col-md-12 text-center">
-              <a href="{% url 'users:login' %}" class="btn btn-primary">
-                Войти
-              </a>
-            </div>
-        </div>
-      </div>
-    </div>
+{% block page_title %}Восстановление пароля завершено{% endblock %}
+{% block page_descr %}Ваш новый пароль был сохранен. Используйте его для
+  входа{% endblock %}
+{% block unreg_content %}
+  <div class="col-md-12 text-center">
+    <a href="{% url 'authapp:login' %}" class="btn btn-primary">
+      Войти
+    </a>
   </div>
 {% endblock %}
