--- a/portal/templates/users/password_reset_done.html
+++ b/portal/templates/users/password_reset_done.html
@@ -1,26 +1,12 @@
-{% extends "base.html" %}
+{% extends "inc/forms/_unregistered_user.html" %}
 {% load static %}
 {% block title %}Восстановление пароля{% endblock %}
-{% block content %}
-  <div class="row justify-content-center">
-    <div class="col-md-8 p-5">
-      <div class="text-center">
-        <img class="mb-2" src="{% static 'images/logo-circle.svg' %}" alt=""
-             width="72"
-             height="72">
-      </div>
-      <h1 class="h3 mb-4 fw-normal text-center">Проверьте почтовый ящик</h1>
-      <div class="card">
-        <div class="card-header">
-          Письмо отправлено
-        </div>
-        <div class="card-body">
-          <p>Проверьте свою почту, вам должно прийти письмо со ссылкой для
-            восстановления пароля. Если письма нет, проверьте папку "Спам"
-            или попробуйте позднее
-          </p>
-        </div>
-      </div>
-    </div>
+{% block page_title %}Восстановление пароля{% endblock %}
+{% block page_descr %}Письмо отправлено{% endblock %}
+{% block unreg_content %}
+  <div class="col-12">
+  <p>Проверьте почтовый ящик</p>
+    <p>Проверьте свою почту, вам должно прийти письмо со ссылкой для
+            восстановления пароля. Если письма нет, проверьте папку "Спам".</p>
   </div>
 {% endblock %}
