--- a/portal/templates/users/signup.html
+++ b/portal/templates/users/signup.html
@@ -1,34 +1,22 @@
-{% extends "base.html" %}
+{% extends "inc/forms/_unregistered_user.html" %}
 {% load static %}
 {% block title %}Зарегистрироваться{% endblock %}
-{% block content %}
-  <div class="row justify-content-center">
-    <div class="col-md-8 p-5">
-      <div class="text-center">
-        <img class="mb-2" src="{% static 'images/logo-circle.svg' %}" alt=""
-             width="72"
-             height="72">
-      </div>
-      <h1 class="h3 mb-4 fw-normal text-center">Регистрация</h1>
-      <div class="card">
-        <div class="card-body">
-          {% include 'inc/forms/_form_nonfield_errors.html' %}
-
-          <form method="post" action="{% url 'users:signup' %}">
-            {% csrf_token %}
-
-            {% include 'inc/forms/_form_fields.html' %}
-            <div class="col-md-12 text-center">
-              <button type="submit" class="btn btn-primary">
-                Зарегистрироваться
-              </button>
-            </div>
-          </form>
-        </div>
-      </div>
+{% block page_title %}Зарегистрироваться{% endblock %}
+{% block page_descr %}Заполните поля, чтобы создать аккаунт{% endblock %}
+{% block unreg_content %}
+  <form method="post"  {% if action_url %} action="{% url 'action_url' %}" {% endif %}
+      class="row g-3 needs-validation" novalidate >
+  {% csrf_token %}
+    {% include 'inc/forms/_form_nonfield_errors.html' %}
+    {% include 'inc/forms/_form_fields.html' %}
+    <div class="col-12">
+      <button class="btn btn-primary w-100" type="submit">Зарегистрироваться
+      </button>
     </div>
-  </div>
+
+    <div class="col-12">
+      <p class="small mb-0">Уже есть аккаунт?
+        <a href="{% url 'authapp:login' %}">Войти</a></p>
+    </div>
+  </form>
 {% endblock %}
-
-
-
