Добавлено управление пользователями и группами. Создано новое приложение для документов.

--- a/portal/templates/base.html
+++ b/portal/templates/base.html
@@ -74,6 +74,7 @@
 ">
 <script src="{% static 'vendor/cropperjs/cropper.min.js' %}"></script>
 <script src="{% static 'js/main.js' %}"></script>
+<script src="{% static 'js/script.js' %}"></script>
 {% block page_scripts  %}{% endblock  %}
 </body>
 </html>
