--- a/portal/templates/users/user_list.html
+++ b/portal/templates/users/user_list.html
@@ -33,7 +33,7 @@
                   {% if user.profile.job %}
                     <p class="me-3 mb-2">{{ user.profile.job }}</p>
                   {% endif %}
-                  <h6 class="me-3"><a href="#">Преподаватели</a></h6>
+                  <h6 class="me-3"><a href="#">{{ user.group }}</a></h6>
                 </div>
               </div>
               <div
