--- a/portal/templates/inc/_aside.html
+++ b/portal/templates/inc/_aside.html
@@ -143,9 +143,9 @@
   </li>
 
   <li class="nav-item">
-    <a class="nav-link collapsed" href="pages-faq.html">
+    <a class="nav-link collapsed" href="{% url 'docs:doc_list' %}">
       <i class="bi bi-question-circle"></i>
-      <span>F.A.Q</span>
+      <span>Документы</span>
     </a>
   </li>
 
