--- a/portal/static/css/style.css
+++ b/portal/static/css/style.css
@@ -87,5 +87,19 @@ form .invalid-feedback {
       display: none !important; } }
   .profile-list-card .arrow-block a::before {
     font-size: 40px;
-    font-size: 40px;
     cursor: pointer; }
+
+.doc-canvas {
+  width: 100%;
+  height: auto;
+  object-fit: contain; }
+
+.doc-preview {
+  width: 100%;
+  max-width: 300px;
+  height: auto; }
+
+.doc-perview__image {
+  width: 100%;
+  max-width: 350px;
+  height: auto; }
