--- a/portal/templates/users/forms/user_search_form.html
+++ b/portal/templates/users/forms/user_search_form.html
@@ -14,7 +14,6 @@
   <div class="col-sm-12 text-center">
     <button type="submit" class="btn btn-primary">Поиск
     </button>
-    <a href="{% url 'users:user_list' %}" class="btn btn-outline-primary">Сброс
-    </a>
+    <button id="clearSearch" class="btn btn-outline-primary">Сброс</button>
   </div>
 </div>
